fix(frontend): fix broken styles

--- a/packages/frontend/src/style.scss
+++ b/packages/frontend/src/style.scss
@@ -179,14 +179,14 @@ rt {
 
 ._pageScrollable {
 	height: 100%;
-	overflow: auto;
+	overflow: clip;
 	overflow-y: scroll;
 	overscroll-behavior: contain;
 }
 
 ._pageScrollableReversed {
 	height: 100%;
-	overflow: auto;
+	overflow: clip;
 	overflow-y: scroll;
 	overscroll-behavior: contain;
 	display: flex;
